mb before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!--  Testing  -->
+<!--  Testing
+      Adding changes before rebaseing conflicts
+-->
 <head>
 	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
