--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
       More changes
 -->
 <head>
-	<title>A Great Website</title>
+	<title>Updating Title for Stashing Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,6 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
+		Putting it back
 		  </p>
 	</main>
 	<footer class="container">
