--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
       More changes
 -->
 <head>
-	<title>Updating Title for Stashing Example</title>
+	<title>Updating Title for Stash Branch Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
